--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.8",
     "antd": "^5.13.2",
+    "axios": "^1.6.7",
+    "netlify-cli": "^17.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2"
