--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@material-tailwind/react": "^2.1.8",
     "antd": "^5.13.2",
     "axios": "^1.6.7",
+    "gsap": "^3.12.5",
     "netlify-cli": "^17.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "scrolltrigger": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
